[workspace]
members = [
  "node",
  "selectors",
  "c",
  "derive"
]

[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "lightningcss"
version = "1.0.0-alpha.38"
description = "A CSS parser, transformer, and minifier"
license = "MPL-2.0"
edition = "2021"
keywords = [ "CSS", "minifier", "Parcel" ]
repository = "https://github.com/parcel-bundler/lightningcss"

[[bin]]
name = "lightningcss"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "lightningcss"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["bundler", "grid", "nodejs", "sourcemap"]
browserslist = ["browserslist-rs"]
bundler = ["dashmap", "sourcemap", "rayon"]
cli = ["atty", "clap", "serde_json", "browserslist", "jemallocator"]
grid = []
jsonschema = ["schemars", "serde", "parcel_selectors/jsonschema"]
nodejs = ["dep:serde"]
serde = ["dep:serde", "smallvec/serde", "cssparser/serde", "parcel_selectors/serde"]
sourcemap = ["parcel_sourcemap"]
visitor = ["lightningcss-derive"]

[dependencies]
serde = { version = "1.0.123", features = ["derive"], optional = true }
cssparser = "0.29.1"
parcel_selectors = { version = "0.24.9", path = "./selectors" }
itertools = "0.10.1"
smallvec = { version = "1.7.0", features = ["union"] }
bitflags = "1.3.2"
parcel_sourcemap = { version = "2.1.1", features = ["json"], optional = true }
data-encoding = "2.3.2"
lazy_static = "1.4.0"
const-str = "0.3.1"
pathdiff = "0.2.1"
# CLI deps
atty = { version = "0.2", optional = true }
clap = { version = "3.0.6", features = ["derive"], optional = true }
browserslist-rs = { version = "0.7.0", optional = true }
rayon = { version = "1.5.1", optional = true }
dashmap = { version = "5.0.0", optional = true }
serde_json = { version = "1.0.78", optional = true }
lightningcss-derive = { version = "1.0.0-alpha.35", path = "./derive", optional = true }
schemars = { version = "*", features = ["smallvec"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"], optional = true }

[dev-dependencies]
indoc = "1.0.3"
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
serde_json = "1"

[[test]]
name = "cli_integration_tests"
path = "tests/cli_integration_tests.rs"
required-features = ["cli"]

[[example]]
name = "custom_at_rule"
required-features = ["visitor"]

[[example]]
name = "serialize"
required-features = ["serde"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
