[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel_css_c_bindings"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
parcel_css = { path = "../", features = ["browserslist"] }
parcel_sourcemap = { version = "2.1.0", features = ["json"] }
browserslist-rs = { version = "0.7.0" }

[build-dependencies]
cbindgen = "0.24.3"
