[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "lightningcss-derive"
description = "Derive macros for lightningcss"
version = "1.0.0-alpha.43"
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/parcel-bundler/lightningcss"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"
