[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "lightningcss-napi"
version = "0.4.6"
description = "Node-API bindings for Lightning CSS"
license = "MPL-2.0"
repository = "https://github.com/parcel-bundler/lightningcss"
edition = "2021"

[features]
default = []
visitor = ["lightningcss/visitor"]
bundler = ["dep:crossbeam-channel", "dep:rayon"]

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde-content = { version = "0.1.2", features = ["serde"] }
serde_bytes = "0.11.5"
cssparser = "0.33.0"
lightningcss = { version = "1.0.0-alpha.69", path = "../", features = [
  "nodejs",
  "serde",
] }
parcel_sourcemap = { version = "2.1.1", features = ["json"] }
serde-detach = "0.0.1"
smallvec = { version = "1.7.0", features = ["union"] }
napi = { version = "2", default-features = false, features = [
  "napi4",
  "napi5",
  "serde-json",
] }
crossbeam-channel = { version = "0.5.6", optional = true }
rayon = { version = "1.5.1", optional = true }
