[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "lightningcss_node"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_bytes = "0.11.5"
cssparser = "0.29.1"
lightningcss = { path = "../" }
parcel_sourcemap = { version = "2.1.1", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = {version = "2.10.0", default-features = false, features = ["napi4", "napi5", "compat-mode", "serde-json"]}
napi-derive = "2"
crossbeam-channel = "0.5.6"
rayon = "1.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde-wasm-bindgen = "0.3.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
napi-build = "1"
