[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "lightningcss_node"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lightningcss-napi = { version = "0.1.0", path = "../napi", features = ["bundler", "visitor"] }
napi = {version = "=2.10.3", default-features = false, features = ["napi4", "napi5", "compat-mode", "serde-json"]}
napi-derive = "2"

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
napi-build = "1"
