[package]
name = "parcel_selectors"
version = "0.25.3"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/parcel_selectors/"
description = "CSS Selectors matching for Rust - forked for lightningcss"
repository = "https://github.com/parcel-bundler/lightningcss"
readme = "README.md"
keywords = ["css", "selectors"]
license = "MPL-2.0"
build = "build.rs"

[lib]
name = "parcel_selectors"
path = "lib.rs"

[features]
bench = []
jsonschema = ["serde", "schemars"]

[dependencies]
bitflags = "2.2.1"
cssparser = "0.29"
fxhash = "0.2"
log = "0.4"
phf = "0.10"
precomputed-hash = "0.1"
smallvec = "1.0"
serde = { version = "1.0.123", features = ["derive"], optional = true }
schemars = { version = "0.8.11", features = ["smallvec"], optional = true }

[build-dependencies]
phf_codegen = "0.10"
