[package]
name = "parcel_selectors"
version = "0.28.2"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/parcel_selectors/"
description = "CSS Selectors matching for Rust - forked for lightningcss"
repository = "https://github.com/parcel-bundler/lightningcss"
readme = "README.md"
keywords = ["css", "selectors"]
license = "MPL-2.0"
build = "build.rs"
edition = "2021"

[lib]
name = "parcel_selectors"
path = "lib.rs"

[features]
bench = []
jsonschema = ["serde", "schemars"]
into_owned = ["static-self"]
smallvec = ["static-self/smallvec"]
serde = ["dep:serde", "smallvec/serde"]

[dependencies]
bitflags = "2.2.1"
cssparser = "0.33.0"
rustc-hash = "2"
log = "0.4"
phf = "0.11.2"
precomputed-hash = "0.1"
smallvec = "1.0"
serde = { version = "1.0.201", features = ["derive"], optional = true }
schemars = { version = "0.8.19", features = ["smallvec"], optional = true }
static-self = { version = "0.1.2", path = "../static-self", optional = true }

[build-dependencies]
phf_codegen = "0.11"
