[package]
name = "static-self"
version = "0.1.0"
edition = "2021"
authors = ["Devon Govett <devongovett@gmail.com>","Donny <kdy1997.dev@gmail.com>"]
description = ""
license = "MPL-2.0"
keywords = [  ]
repository = "https://github.com/parcel-bundler/lightningcss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "1.11.1", optional = true }
static-self-derive = { version = "0.1.0", path = "../static-self-derive" }
